CSS, fix to footer to avoid vertical scrollbar

--- a/assets/css/uzerp/screen.less
+++ b/assets/css/uzerp/screen.less
@@ -834,6 +834,7 @@
 /* footer styling **/
 
 	#footer {
+		display: inline-block;
 		width: 100%;
 		color: @dark-grey;
 		clear: both;
